other/deny-force-delete/.chainsaw-test/goodpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test1-good
  name: test1-good
spec:
  containers:
  - image: nginx
    name: test1-good
options:
  gracePeriodSeconds: 30
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test2-good
  name: test2-good
spec:
  containers:
  - image: nginx
    name: test2-good
options:
  gracePeriodSeconds: 60
