other/deny-force-delete/deny-force-delete.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-zero-grace-delete
  annotations:
    policies.kyverno.io/title: Deny force deletion of resources with zero grace period
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.12.5
    policies.kyverno.io/minversion: 1.10.0
    kyverno.io/kubernetes-version: "1.26"
    policies.kyverno.io/description: >-
      When deleting any resources, the default timer is 30 seconds which allows a graceful 
      shutdown of the resource. The flags '--grace-period=0 --force' removes this timer and 
      deletes the resource immediately.
      Force deleting Kubernetes pods can result in lingering processes which  can cause issues 
      like data corruption if these processes access shared resources or external APIs using 
      the pod’s identity. Use force deletion only when certain the pod is terminated or if the 
      application tolerates duplicates. Force deletion may cause resource allocation conflicts, 
      leading to newly assigned pods being immediately evicted.      
spec:
  validationFailureAction: Audit
  background: false
  rules:
  - name: deny-zero-grace-delete
    match:
      any:
      - resources:
          kinds:
          - Pod
          operations:
          - DELETE
    exclude:
      any:
      - clusterRoles:
        - cluster-admin
    validate:
      message: "Force deletion of resources with '--grace-period=0 --force' is not allowed for non-admin users."
      deny:
        conditions:
          all:
          - key: "{{ request.options.gracePeriodSeconds || `1` }}"
            operator: Equals 
            value: 0
