other/deny-force-delete/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-zero-grace-delete
status:
  ready: true
